--- a/app/d-11.jade
+++ b/app/d-11.jade
@@ -7,7 +7,7 @@ html(lang='en')
   body
     h1 Drill 11
 
-    div.bigDiv#up#down#left#right
+    div.bigDiv
       div.smallDiv
 
     script(src='./js/vendor/jquery-2.1.0.js')
