--- a/app/css/d-11.less
+++ b/app/css/d-11.less
@@ -2,10 +2,12 @@
   height: 200px;
   width: 200px;
   background-color: black;
+  position: absolute;
 }
 
 .smallDiv{
   height: 50px;
   width: 50px;
   background-color: red;
+  position: absolute;
 }
